--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,29 @@
-.settings/
-.myeclipse/
-.gradle/
 target/
-*/.settings
-*/.classpath
-*/.project
+!.mvn/wrapper/maven-wrapper.jar
+
+### STS ###
+.apt_generated
 .classpath
+.factorypath
 .project
-.idea/
-.svn/
-.externalToolBuilders/
-gradle/
-.recommenders/
-.metadata/
-*/node_modules
-node_modules
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### BUILD ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+bin/
+doc/
+target/
+out/
+.DS_Store
+© 2020 GitHub, Inc.
