--- a/sample/sample.bundle.account/pom.xml
+++ b/sample/sample.bundle.account/pom.xml
@@ -14,15 +14,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<swagger2.version>2.6.1</swagger2.version>
 		<mybatis-plus.version>3.1.0</mybatis-plus.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.sf.ddd</groupId>
-			<artifactId>sf-ddd-core</artifactId>
-			<version>1.0.2</version>
-		</dependency>
 		<dependency>
 			<groupId>com.sf.ddd.sample</groupId>
 			<artifactId>sample.bundle.facade</artifactId>
