--- a/sample/sample.application/src/main/resources/application-dev.yaml
+++ b/sample/sample.application/src/main/resources/application-dev.yaml
@@ -11,10 +11,10 @@ spring:
   messages:
     encoding: utf-8
   datasource:
-    url: jdbc:mysql://sdeisfxcloud-m.dbsit.sfcloud.local:3306/sdeis_fxcloud?useSSL=false&amp;useUnicode=true&amp;characterEncoding=UTF8
+    url: jdbc:mysql://xxx.xxx.xxx:3306/xxx?useSSL=false&amp;useUnicode=true&amp;characterEncoding=UTF8
     hikari:
-      username: sdeis_fxcloud
-      password: ENC(1OLEa1ZfXOPSsQYOMf+dPomZUzqnipM/)
+      username: 
+      password: 
       idle-timeout: 600000
       max-lifetime: 1800000
       maximum-pool-size: 8
@@ -22,10 +22,10 @@ spring:
       connection-test-query: SELECT 1
     driver-class-name: com.mysql.jdbc.Driver
   redis:
-    password: ENC(E/w/00cLG3JBnp9nZUJEEvFNH1h1j6XlseYbwjsD3No=)
+    password: 
     sentinel:
-      master: ESG_SDEIS_CORE_REDIS_C01
-      nodes: esg-sdeis-core1.cachesit.sfdc.com.cn:8001,esg-sdeis-core2.cachesit.sfdc.com.cn:8001,esg-sdeis-core3.cachesit.sfdc.com.cn:8001
+      master: xxx
+      nodes: 
     database: 5
   servlet:
     multipart:
@@ -48,7 +48,7 @@ logging:
 
 jasypt:
   encryptor:
-    password: 2sJsOWjTIQx
+    password: 
 
 applications:
   dddUrl: http://ddd.dev.sf-express.com
