--- a/sample/sample.bundle.account/pom.xml
+++ b/sample/sample.bundle.account/pom.xml
@@ -21,7 +21,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.sf.ddd.sample</groupId>
-			<artifactId>sample.bundle.facade</artifactId>
+			<artifactId>sample.common.facade</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
