--- a/sample/sample.bundle.order/pom.xml
+++ b/sample/sample.bundle.order/pom.xml
@@ -25,7 +25,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.sf.ddd.sample</groupId>
-			<artifactId>sample.bundle.facade</artifactId>
+			<artifactId>sample.common.facade</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
